--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,18 @@
 language: python
 
 python:
-  - "3.3"
   - "2.7"
-  - "2.6"
+ # - "3.3"
+ # - "2.6"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements-test.txt
+install: 
+  - pip install -r requirements-test.txt
 
 # command to run tests using coverage, e.g. python setup.py test
-script: coverage run --source contactuspage runtests.py
+script: 
+  - python contactuspagedemoapp/manage.py test contactuspagedemo
+#- coverage run --source contactuspage runtests.py
 
 # report coverage to coveralls.io
-after_success: coveralls
+#after_success: coveralls
