--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,10 +1,13 @@
-django>=1.5.1
-coverage
-coveralls
+# App 
+django>=1.6.11
+django-floppyforms==1.2.0
+-e git://github.com/DjenieLabs/django-contactus-page.git#egg=django-contactus-page
+
+# Test
+# coverage
+# coveralls
 mock>=1.0.1
 nose>=1.3.0
 django-nose>=1.2
 flake8>=2.1.0
 tox>=1.7.0
-
-# Additional test requirements go here
