--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,5 @@
 # App 
-django>=1.6.11
+Django==1.6.11
 South==1.0.2
 django-floppyforms==1.2.0
 -e git://github.com/DjenieLabs/django-multisites-utils.git#egg=django-multisites-utils
