--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -6,8 +6,8 @@ django-floppyforms==1.2.0
 -e git://github.com/DjenieLabs/django-contactus-page.git#egg=django-contactus-page
 
 # Test
-# coverage
-# coveralls
+coverage
+coveralls
 mock>=1.0.1
 nose>=1.3.0
 django-nose>=1.2
